Bug 1626170 - Always fail properly when failing to read input.  r=bbouvier

The byte readers in WasmOpIter.h do not themselves signal error beyond
returning false.  The caller must always signal a proper error (or
delegate to another caller who does the signaling), or the decoding
error will ultimately be signaled as an OOM.

Differential Revision: https://phabricator.services.mozilla.com/D68957