js/src/wasm/WasmOpIter.h
@@ -1417,7 +1417,7 @@ inline bool OpIter<Policy>::checkBrTableEntry(uint32_t* relativeDepth,
                                               ResultType* type,
                                               ValueVector* branchValues) {
   if (!readVarU32(relativeDepth)) {
-    return false;
+    return fail("unable to read br_table depth");
   }
 
   Control* block = nullptr;
@@ -1582,12 +1582,12 @@ inline bool OpIter<Policy>::readMemOrTableIndex(bool isMem, uint32_t* index) {
   if (readByte) {
     uint8_t indexTmp;
     if (!readFixedU8(&indexTmp)) {
-      return false;
+      return fail("unable to read memory or table index");
     }
     *index = indexTmp;
   } else {
     if (!readVarU32(index)) {
-      return false;
+      return fail("unable to read memory or table index");
     }
   }
   return true;
@@ -1701,7 +1701,7 @@ inline bool OpIter<Policy>::readMemorySize() {
 
   uint8_t flags;
   if (!readFixedU8(&flags)) {
-    return false;
+    return fail("failed to read memory flags");
   }
 
   if (flags != uint8_t(MemoryTableFlags::Default)) {
@@ -1721,7 +1721,7 @@ inline bool OpIter<Policy>::readMemoryGrow(Value* input) {
 
   uint8_t flags;
   if (!readFixedU8(&flags)) {
-    return false;
+    return fail("failed to read memory flags");
   }
 
   if (flags != uint8_t(MemoryTableFlags::Default)) {
@@ -1807,7 +1807,7 @@ inline bool OpIter<Policy>::readGetLocal(const ValTypeVector& locals,
   MOZ_ASSERT(Classify(op_) == OpKind::GetLocal);
 
   if (!readVarU32(id)) {
-    return false;
+    return fail("unable to read local index");
   }
 
   if (*id >= locals.length()) {
@@ -1823,7 +1823,7 @@ inline bool OpIter<Policy>::readSetLocal(const ValTypeVector& locals,
   MOZ_ASSERT(Classify(op_) == OpKind::SetLocal);
 
   if (!readVarU32(id)) {
-    return false;
+    return fail("unable to read local index");
   }
 
   if (*id >= locals.length()) {
@@ -1839,7 +1839,7 @@ inline bool OpIter<Policy>::readTeeLocal(const ValTypeVector& locals,
   MOZ_ASSERT(Classify(op_) == OpKind::TeeLocal);
 
   if (!readVarU32(id)) {
-    return false;
+    return fail("unable to read local index");
   }
 
   if (*id >= locals.length()) {
@@ -1860,7 +1860,7 @@ inline bool OpIter<Policy>::readGetGlobal(uint32_t* id) {
   MOZ_ASSERT(Classify(op_) == OpKind::GetGlobal);
 
   if (!readVarU32(id)) {
-    return false;
+    return fail("unable to read global index");
   }
 
   if (*id >= env_.globals.length()) {
@@ -1875,7 +1875,7 @@ inline bool OpIter<Policy>::readSetGlobal(uint32_t* id, Value* value) {
   MOZ_ASSERT(Classify(op_) == OpKind::SetGlobal);
 
   if (!readVarU32(id)) {
-    return false;
+    return fail("unable to read global index");
   }
 
   if (*id >= env_.globals.length()) {
@@ -1894,7 +1894,7 @@ inline bool OpIter<Policy>::readTeeGlobal(uint32_t* id, Value* value) {
   MOZ_ASSERT(Classify(op_) == OpKind::TeeGlobal);
 
   if (!readVarU32(id)) {
-    return false;
+    return fail("unable to read global index");
   }
 
   if (*id >= env_.globals.length()) {
@@ -1919,28 +1919,44 @@ template <typename Policy>
 inline bool OpIter<Policy>::readI32Const(int32_t* i32) {
   MOZ_ASSERT(Classify(op_) == OpKind::I32);
 
-  return readVarS32(i32) && push(ValType::I32);
+  if (!readVarS32(i32)) {
+    return fail("failed to read I32 constant");
+  }
+
+  return push(ValType::I32);
 }
 
 template <typename Policy>
 inline bool OpIter<Policy>::readI64Const(int64_t* i64) {
   MOZ_ASSERT(Classify(op_) == OpKind::I64);
 
-  return readVarS64(i64) && push(ValType::I64);
+  if (!readVarS64(i64)) {
+    return fail("failed to read I64 constant");
+  }
+
+  return push(ValType::I64);
 }
 
 template <typename Policy>
 inline bool OpIter<Policy>::readF32Const(float* f32) {
   MOZ_ASSERT(Classify(op_) == OpKind::F32);
 
-  return readFixedF32(f32) && push(ValType::F32);
+  if (!readFixedF32(f32)) {
+    return fail("failed to read F32 constant");
+  }
+
+  return push(ValType::F32);
 }
 
 template <typename Policy>
 inline bool OpIter<Policy>::readF64Const(double* f64) {
   MOZ_ASSERT(Classify(op_) == OpKind::F64);
 
-  return readFixedF64(f64) && push(ValType::F64);
+  if (!readFixedF64(f64)) {
+    return fail("failed to read F64 constant");
+  }
+
+  return push(ValType::F64);
 }
 
 template <typename Policy>
@@ -2040,7 +2056,7 @@ inline bool OpIter<Policy>::readCallIndirect(uint32_t* funcTypeIndex,
   }
 
   if (!readVarU32(tableIndex)) {
-    return false;
+    return fail("unable to read call_indirect table index");
   }
   if (*tableIndex >= env_.tables.length()) {
     // Special case this for improved user experience.
@@ -2352,7 +2368,7 @@ inline bool OpIter<Policy>::readDataOrElemDrop(bool isData,
   MOZ_ASSERT(Classify(op_) == OpKind::DataOrElemDrop);
 
   if (!readVarU32(segIndex)) {
-    return false;
+    return fail("unable to read segment index");
   }
 
   if (isData) {
@@ -2381,7 +2397,7 @@ inline bool OpIter<Policy>::readMemFill(Value* start, Value* val, Value* len) {
 
   uint8_t memoryIndex;
   if (!readFixedU8(&memoryIndex)) {
-    return false;
+    return fail("failed to read memory index");
   }
   if (!env_.usesMemory()) {
     return fail("can't touch memory without memory");
@@ -2426,7 +2442,7 @@ inline bool OpIter<Policy>::readMemOrTableInit(bool isMem, uint32_t* segIndex,
   }
 
   if (!readVarU32(segIndex)) {
-    return false;
+    return fail("unable to read segment index");
   }
 
   uint32_t memOrTableIndex = 0;
@@ -2470,7 +2486,7 @@ inline bool OpIter<Policy>::readTableFill(uint32_t* tableIndex, Value* start,
   MOZ_ASSERT(Classify(op_) == OpKind::TableFill);
 
   if (!readVarU32(tableIndex)) {
-    return false;
+    return fail("unable to read table index");
   }
   if (*tableIndex >= env_.tables.length()) {
     return fail("table index out of range for table.fill");
@@ -2494,7 +2510,7 @@ inline bool OpIter<Policy>::readTableGet(uint32_t* tableIndex, Value* index) {
   MOZ_ASSERT(Classify(op_) == OpKind::TableGet);
 
   if (!readVarU32(tableIndex)) {
-    return false;
+    return fail("unable to read table index");
   }
   if (*tableIndex >= env_.tables.length()) {
     return fail("table index out of range for table.get");
@@ -2514,7 +2530,7 @@ inline bool OpIter<Policy>::readTableGrow(uint32_t* tableIndex,
   MOZ_ASSERT(Classify(op_) == OpKind::TableGrow);
 
   if (!readVarU32(tableIndex)) {
-    return false;
+    return fail("unable to read table index");
   }
   if (*tableIndex >= env_.tables.length()) {
     return fail("table index out of range for table.grow");
@@ -2537,7 +2553,7 @@ inline bool OpIter<Policy>::readTableSet(uint32_t* tableIndex, Value* index,
   MOZ_ASSERT(Classify(op_) == OpKind::TableSet);
 
   if (!readVarU32(tableIndex)) {
-    return false;
+    return fail("unable to read table index");
   }
   if (*tableIndex >= env_.tables.length()) {
     return fail("table index out of range for table.set");
@@ -2560,7 +2576,7 @@ inline bool OpIter<Policy>::readTableSize(uint32_t* tableIndex) {
   *tableIndex = 0;
 
   if (!readVarU32(tableIndex)) {
-    return false;
+    return fail("unable to read table index");
   }
   if (*tableIndex >= env_.tables.length()) {
     return fail("table index out of range for table.size");
